@@ -1,9 +1,38 @@
 <?php
+/**
+ * ispCP ω (OMEGA) a Virtual Hosting Control System
+ *
+ * @copyright	2001-2006 by moleSoftware GmbH
+ * @copyright	2006-2009 by ispCP | http://isp-control.net
+ * @version		SVN: $Id$
+ * @link		http://isp-control.net
+ * @author		ispCP Team
+ *
+ * @license
+ *   This program is free software; you can redistribute it and/or
+ *   modify it under the terms of the GPL General Public License
+ *   as published by the Free Software Foundation; either version 2.0
+ *   of the License, or (at your option) any later version.
+ *
+ *   This program is distributed in the hope that it will be useful,
+ *   but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+ *   GPL General Public License for more details.
+ *
+ *   You may have received a copy of the GPL General Public License
+ *   along with this program.
+ *
+ *   An on-line copy of the GPL General Public License can be found
+ *   http://www.fsf.org/licensing/licenses/gpl.txt
+ */
 
 /**
  * @todo separate the 2 classes Database + DatabaseResult in two different files
  */
 
+/**
+ * This class wrap the PDO abstraction layer
+ */
 final class Database {
 
 	protected static $_instances = array();
@@ -32,6 +61,23 @@ final class Database {
 			$_instances[$connection]->close();
 		}
 		return self::$_instances[$connection] = new Database($user, $pass, $type, $host, $name);
+	}
+
+	/**
+	 * Set an attribute
+	 *
+	 * Sets an attribute on the database handle.
+	 * See the PDO guideline for more information about this.
+	 *
+	 * @since	r2013
+	 * @author	Laurent Declercq <l.declercq@nuxwin.com>
+	 *
+	 * @param	int $attribute Attribute uid
+	 * @param	mixed $value Attribute value
+	 * @return	boolean Returns TRUE on success or FALSE on failure.
+	 */
+	public function setAttribute($attribute, $value) {
+		return $this->_db->setAttribute($attribute, $value);
 	}
 
 	public function ErrorMsg() {
@@ -95,6 +141,25 @@ final class Database {
 
 	public function CompleteTrans() {
 		$this->_db->commit();
+	}
+
+	/**
+	 * Rolls back the current transaction
+	 *
+	 * Rolls back the current transaction, as initiated
+	 * by Database::StartTrans().
+	 *
+	 * @since	r2013
+	 * @author	Laurent Declercq <l.declercq@nuxwin.com>
+	 *
+	 * @param	int $attribute Attribute uid
+	 * @param	mixed $value Attribute value
+	 * @return	boolean Returns TRUE on success or FALSE on failure.
+	 *
+	 * @return void
+	 */
+	public function RollbackTrans() {
+		$this->_db->rollback();
 	}
 
 	public function HasFailedTrans() {
