@@ -1,13 +1,20 @@
 ispCP ω 1.0.3 Changelog
 ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
+2009-09-22 Laurent Declercq
+	- GUI:
+		* Fixed #1989: Failed database updates are silently ignored
+		* Fixed #2000: Wrong default value for 'USER_INITAL_LANG' configuration variable
+			- Added an new db databaseUpdate (25) to fix the 'user_gui_props.lang' value ('lang_EnglishBritain' instead of 'lang_English')
+		* Small fixes
+
 2009-09-21 Laurent Declercq
 	- DOCS:
-		* Fixed #1997: "perl-HTML-Entities" in OpenSuSE packages lists because the module "HTML::Entities" is
+		* Fixed #1997: Removed "perl-HTML-Entities" in OpenSuSE packages lists because the module "HTML::Entities" is
 		  provided by the package perl-HTML-Parser. The package perl-HTML-Entities in itself does not exist.
 
 2009-09-20 Laurent Declercq
-	-GUI:
+	- GUI:
 		* Fixed #1985: Several problems with the fixes related to #1971 and #1980 ( Introduced in r1986 )
 			- Moved db criticalUpdate 4 && 5 to db databaseUpdate (because the criticalUpdate is performed before)
 			- Added databaseUpdate 24 for the following database fixes:
